# bity-arbitrage-bot

./: README.md  pyproject.toml
bity_arbitrage_bot/: arbitrage_bot.py  enums.py  main.py
