[project]
name = "bity-arbitrage-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gabriel Crestani", email = "gabrielpcrestani@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bity_arbitrage_bot"]
